--- a/package.json
+++ b/package.json
@@ -34,6 +34,16 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "scripts": {
     "commit": "git-cz",
     "release": "semantic-release"
@@ -44,10 +54,13 @@
     "typed-css-modules": "0.6.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "8.2.0",
+    "@commitlint/config-conventional": "8.2.0",
     "@semantic-release/changelog": "3.0.4",
     "@semantic-release/git": "7.0.16",
     "commitizen": "4.0.3",
     "cz-conventional-changelog": "3.0.2",
+    "husky": "3.0.9",
     "parcel-bundler": "1.12.4",
     "prettier": "1.18.2",
     "semantic-release": "15.13.27"
