--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "types",
     "typescript"
   ],
+  "engines": {
+    "node": ">= 10.0.0"
+  },
   "publishConfig": {
     "access": "public"
   },
