chore: improve Prettier configuration

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,10 +6,10 @@
     {
       "files": [
         "*.json",
-        ".prettierrc",
-        ".releaserc"
+        ".*rc"
       ],
       "options": {
+        "parser": "json",
         "printWidth": 0,
         "tabWidth": 2
       }
