chore: support YAML files in the code style

--- a/.prettierrc
+++ b/.prettierrc
@@ -13,6 +13,14 @@
         "printWidth": 0,
         "tabWidth": 2
       }
+    },
+    {
+      "files": [
+        "*.yml"
+      ],
+      "options": {
+        "tabWidth": 2
+      }
     }
   ],
   "printWidth": 100,
