--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "commitizen": "4.0.3",
     "cz-conventional-changelog": "3.0.2",
     "husky": "3.1.0",
+    "lint-staged": "10.0.7",
     "parcel-bundler": "1.12.4",
     "prettier": "1.19.1",
     "semantic-release": "15.14.0"
