chore(bots): review renovate configuration

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,13 +1,21 @@
 {
   "extends": [
     "config:base",
-    ":enableVulnerabilityAlertsWithLabel(security)",
+    ":automergeBranch",
+    ":automergeDigest",
+    ":automergeMinor",
+    ":automergeRequireAllStatusChecks",
+    ":dependencyDashboard",
+    ":disablePeerDependencies",
+    ":disableRateLimiting",
+    ":enableVulnerabilityAlerts",
     ":label(dependencies)",
-    ":masterIssue",
-    ":prConcurrentLimit10",
-    ":prHourlyLimit4",
+    ":pinAllExceptPeerDependencies",
     ":timezone(Europe/Lisbon)",
     "schedule:earlyMondays"
+  ],
+  "enabledManagers": [
+    "npm"
   ],
   "postUpdateOptions": [
     "yarnDedupeHighest"
